made initial game window
 - made Creature sprite class
 - made Creature class
 - made Immortal class
 - added displaying of player and enemy immortals