@@ -1,0 +1,13 @@
+# library with come colour rgb values set up
+
+red = 		[255,  0,  0]
+yellow =	[255,255,  0]
+green =		[  0,255,  0]
+cyan =		[  0,255,255]
+blue =		[  0,  0,255]
+magenta=	[255,  0,255]
+black =		[  0,  0,  0]
+darkGrey = 	[ 63, 63, 63]
+grey = 		[127,127,127]
+lightGrey =	[190,190,190]
+white = 	[255,255,255]
